fixed styles close on add story popup on mobile

--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -263,8 +263,28 @@
     max-width: 100%;
     top: 0;
     border-radius: 0;
-    > .close {
-      display: none;
+
+    .close {
+
+      @include media-breakpoint-down($desktop-breakpoint) {
+        width: auto;
+      }
+
+      @include media-breakpoint-up($desktop-breakpoint) {
+        display: none;
+      }
+
+      &:before {
+
+        @include media-breakpoint-down($desktop-breakpoint) {
+          position: relative;
+          left: auto;
+          right: auto;
+          top: auto;
+          bottom: auto;
+          opacity: 1;
+        }
+      }
     }
   }
 }
